--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                 <div class="col-lg-5">
                     <div class="banner-img">
                         <!-- <img src="images/banner.png" alt="banner-img" class="img-fluid"> -->
-                        <object data='images/play-video.svg' class=""> </object>
+                        <!-- <object data='images/play-video.svg' class=""> </object> -->
+                        <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/intro.webm" type="video/webm"/> </video>
                     </div>
                 </div>
             </div>
