update-contact-form

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 <h3> Matthias hier, ik sta voor jou klaar! </h3>
                                 <p> Al jaren zet ik mij in om animaties bij te leren, zo zorg ik ervoor dat ik alle aansluiten programma's goed onder de knie heb. </p>
                                 <p class="separate-p tab-hider">Laat ons afspreken voor een eerste gesprek, zo kunnen we bekijken in welke richting wij een video kunnen uitwerken.</p>
-                                <a href="contact">Contacteer mij nu!</a>
+                                <a class="" href="mailto:matt.de.meyer@hotmail.com" data-toggle="" data-target="#">Contacteer mij nu!</a>
                             </div>
                         </div>
                     </div>
