text+logo changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="#waarden">Waarden</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallerij">Gallerij</a>
+                        <a class="nav-link" href="#gallerij">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link bor" href="mailto:matt.de.meyer@hotmail.com" data-toggle="" data-target="#">Contact</a>
@@ -136,8 +136,8 @@
             <div class="row">
                 <div class="col-lg-7 banner-txt">
                     <h3>Zeg het met een explainer video</h3>
-                    <p> Ideaal om jouw bedrijf te verklaren of beter in de kijker te staan. Een explainer video is kort, krachtig en effectief. Zo kan je jouw onderwerp in enkele minuten verteld krijgen.</p>
-                    <a href="#gallerij"> Ga naar Gallerij</a>
+                    <p> Waarom een explainer video? Het is kort, krachtig en effectief: Zo kan je je onderwerp in enkele minuten verteld krijgen. De ideale manier om jouw bedrijf in de kijker te staan.</p>
+                    <a href="#gallerij"> Ga naar Gallery</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="banner-img">
@@ -177,8 +177,8 @@
                             <div class="over-item txt-left unique-style">
                                 <object data='images/icons/graphic.svg' width="64" height="64"> </object>
                                 <div class="break"></div>
-                                <h3>2. Klank</h3>
-                                <p> Geluid zoals muziek en Voice Over zorgen voor een passende sfeer in functie van jouw verhaal.</p>
+                                <h3>2. Audio</h3>
+                                <p> Audio zoals muziek en voice-over zorgen voor een passende sfeer in functie van je verhaal.</p>
                                 <div class="over-btn">
                                 <!-- <a href="#">Read More</a> -->
                                 </div>
@@ -189,7 +189,7 @@
                                 <object data='images/icons/music.svg' width="64" height="64"> </object>
                                 <div class="break"></div>
                                 <h3>3. Graphics</h3>
-                                <p>Graphics worden gekozen of aangemaakt in de huisstijl van jouw bedrijf, de basis van een goede animatievideo.</p>
+                                <p>We kiezen of maken graphics aan de hand van jouw huisstijl, de basis van een goede animatievideo.</p>
                                 <div class="over-btn">
                                 <!-- <a href="#">Read More</a> -->
                                 </div>
@@ -200,7 +200,7 @@
                                 <object data='images/icons/animation.svg' width="64" height="64"> </object>
                                 <div class="break"></div>
                                 <h3>4. Animaties</h3>
-                                <p>Leuke efficiïente animaties maken de video af. Deze zorgen voor dynamiek en zijn een echte eye-catcher.</p>
+                                <p>Leuke efficiënte animaties maken de video af. Deze zorgen voor dynamiek en zijn een echte eyecatcher.</p>
                                 <div class="over-btn">
                                 <!-- <a href="#">Read More</a> -->
                                 </div>
@@ -218,7 +218,7 @@
         <div class="container">
             <div class="row header-text text-center about-header">
                 <div class="col-lg-12">
-                    <h3>KENNISM<span>A</span>KING</h3>
+                    <h3>LET'S T<span>A</span>LK</h3>
                 </div>
             </div>
             <div class="row about-pa">
@@ -230,10 +230,10 @@
                         <div class="col-lg-1 col-md-1"></div>
                         <div class="col-lg-7 col-md-6">
                             <div class="about-txt">
-                                <span class="separet-span">About Me</span>
-                                <h3> Matthias hier, ik sta voor jou klaar! </h3>
-                                <p> Al jaren zet ik mij in om animaties bij te leren, zo zorg ik ervoor dat ik alle aansluiten programma's goed onder de knie heb. </p>
-                                <p class="separate-p tab-hider">Laat ons afspreken voor een eerste gesprek, zo kunnen we bekijken in welke richting wij een video kunnen uitwerken.</p>
+                                <!-- <span class="separet-span">About Me</span> -->
+                                <h3> Matthias, de man achter Mattimotions </h3>
+                                <p> Al jaren zet ik mij in om me meer te verdiepen in animaties, zo zorg ik voor een goede uitvoering van begin tot eind.</p>
+                                <p class="separate-p tab-hider">Laat ons afspreken voor een eerste gesprek, zo kunnen we bekijken in welke richting wij je animatievideo kunnen uitwerken.</p>
                                 <a class="" href="mailto:matt.de.meyer@hotmail.com" data-toggle="" data-target="#">Contacteer mij nu!</a>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                         <h3>Directe communicatie</h3>
                         <h4><sub></sub>TALK<sub></sub></h4>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Snel en efficiënt met elkaar communiceren</p>
-                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Aanpassingen kunnen zo beter uitgevoerd worden</p>
+                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Aanpassingen kunnen beter worden uitgevoerd</p>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We komen uit op een positief eindresultaat</p>
 
                             <!--
@@ -272,7 +272,7 @@
                         <h3>Creativiteit</h3>
                         <h4><sub></sub>ORIGINAL<sub></sub></h4>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Verschillende animaties en stijlen zijn mogelijk</p>
-                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We bekijken welke het best past bij jouw stijl</p>
+                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We bekijken welke het best passen bij jouw huisstijl</p>
 
                             <!--
                             <div class="price-btn text-center">
@@ -283,8 +283,8 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="price-table">
                         <h3>Volledige bundel</h3>
-                        <h4><sub></sub>PAKKET<sub></sub></h4>
-                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We werken project af van begin tot einde </p>
+                        <h4><sub></sub>PACKAGE<sub></sub></h4>
+                        <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> We werken projecten af van begin tot einde </p>
                         <p><i class="fa fa-check-circle-o" aria-hidden="true"></i> Het eindresultaat kan in meerdere formaten worden gegoten </p>
 
                         <!--
@@ -458,7 +458,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Grahpic animation - It is me </h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - It is me </h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -483,7 +483,7 @@
                                     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalCenterTitle">Explanation video - Paddlebox car</h5>
+                                                <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - Paddlebox car</h5>
                                             </div>
 
                                             <div class="modal-body">
@@ -539,7 +539,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Graphic animation - Assassination classroom </h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - Assassination classroom </h5>
                                     </div>
                                     <div class="modal-body">
                                 
@@ -570,7 +570,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Graphic animation - Neeko </h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - Neeko </h5>
                                     </div>
                                     <div class="modal-body">
                                 
@@ -633,7 +633,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Grahpic animation - God is Profile Pic</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - God is ProfilePic</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -659,7 +659,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Grahpic animation - Computer Cat</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - Computer Cat</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -685,7 +685,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Game Concept video - Space Stacker</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Game Concept video - Space Stacker</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -711,7 +711,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Game Concept video - Space Stacker</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - God is Egg</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -954,7 +954,7 @@
                     <div class="footer-logo">
             <!--            <a class="f-logo" href="#banner"><b>Animado.</b></a> -->
                         <object data="images/logo-top-new.svg" class="logo"></object>
-                        <p> Samen zorgen voor een passende video voor jouw bedrijf, let's animate it! </p>
+                        <p> Samen zorgen voor een passende video voor JE bedrijf, let's animate it! </p>
                         <!--
                         <div class="footer-social">
                             <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -1002,7 +1002,7 @@
                             <li><a href="#Onderdelen">Onderdelen</a></li>
                             <li><a href="#Kennismaking">Kennismaking</a></li>
                             <li><a href="#waarden">Waarden</a></li>
-                            <li><a href="#gallerij">Gallerij</a></li>
+                            <li><a href="#gallerij">Gallery</a></li>
                         </ul>
                     </div>
                 </div>
