deleting xmp + adding questrial animatie toevoegen

--- a/index.html
+++ b/index.html
@@ -143,7 +143,10 @@
                     <div class="banner-img">
                         <!-- <img src="images/banner.png" alt="banner-img" class="img-fluid"> -->
                         <!-- <object data='images/play-video.svg' class=""> </object> -->
-                        <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/intro.webm" type="video/webm"/> </video>
+                        <video autoplay muted loop class="img-fluid about-img ai-one"> 
+                            <source src="images/intro.webm" type="video/webm"/>
+                            
+                        </video>
                     </div>
                 </div>
             </div>
@@ -164,7 +167,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-sm-6">
                             <div class="over-item txt-right unique-style3">
-                                <object data='images/icons/script.svg' width="64" height="64"> </object>
+                                <object data='images/icons/script.svg' class="icons"> </object>
                                 <div class="break"></div>
                                 <h3>1. Script</h3>
                                 <p>Samen stellen we een passend script op dat jouw verhaal zo goed mogelijk in de kijker zet.</p>
@@ -175,7 +178,7 @@
                         </div>
                         <div class="col-lg-6 col-sm-6">
                             <div class="over-item txt-left unique-style">
-                                <object data='images/icons/graphic.svg' width="64" height="64"> </object>
+                                <object data='images/icons/graphic.svg' class="icons"> </object>
                                 <div class="break"></div>
                                 <h3>2. Audio</h3>
                                 <p> Audio zoals muziek en voice-over zorgen voor een passende sfeer in functie van je verhaal.</p>
@@ -186,7 +189,7 @@
                         </div>
                         <div class="col-lg-6 col-sm-6">
                             <div class="over-item txt-right unique-style2">
-                                <object data='images/icons/music.svg' width="64" height="64"> </object>
+                                <object data='images/icons/music.svg' class="icons"> </object>
                                 <div class="break"></div>
                                 <h3>3. Graphics</h3>
                                 <p>We kiezen of maken graphics aan de hand van jouw huisstijl, de basis van een goede animatievideo.</p>
@@ -198,6 +201,11 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="over-item txt-left unique-style4">
                                 <object data='images/icons/animation.svg' width="64" height="64"> </object>
+                                <!--<div class="videospace embed-responsive embed-responsive-1by1">
+                                    <video autoplay muted loop class="img-fluid icons"> <source src="images/icons/icon-animation.mp4" type="video/mp4"/> </video> -->
+                                    
+                                <!--</div> -->
+
                                 <div class="break"></div>
                                 <h3>4. Animaties</h3>
                                 <p>Leuke efficiënte animaties maken de video af. Deze zorgen voor dynamiek en zijn een echte eyecatcher.</p>
