add questrial animation

--- a/index.html
+++ b/index.html
@@ -730,7 +730,33 @@
                                     </div>
                                 </div>
                             </div> 
-                        </div> 
+                        </div>
+
+                            <!-- GALLERY PHOTO + HOVER START - 15: Questrial -->
+
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-12 gallery-img g-mar sm-gallery-top2 card">
+                                <img src="images/gallery-thumbnails/questrial-no-hover.jpg"          alt="gallery-img" class="img-fluid w-100 sp-img img-bottom" data-toggle="modal" data-target="#exampleModalCenter15">
+                                <img src="images/gallery-thumbnails/questrial.jpg"                   alt="gallery-img" class="img-fluid w-100 sp-img img-top" data-toggle="modal" data-target="#exampleModalCenter15">
+                            </div>
+
+                        <!-- GALLERY AREA START - 15: Questrial -->
+
+                        <div class="modal fade" id="exampleModalCenter15" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Grahpic animation - Font: Questrial</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="videospace embed-responsive embed-responsive-16by9">
+                                            <video autoplay muted loop class="img-fluid"> <source src="images/gallery/questrial-colors.webm" type="video/webm"/> </video>s
+                                            </div> </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div> 
+                        </div>
 
                     </div>
                         </div>
