Deleting animado from html code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="HTML5 Template,Animation Studio, Cartoon" />
-    <meta name="description" content="Animado - Animation & Cartoon Studio Template" />
+    <meta name="keywords" content="motion design, animation, Eplainer" />
+    <meta name="description" content="Explainer video to tell a clear story" />
     <title>mattimotions - Let's animate it! </title>
     <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
     <!--font-awesome icons link-->
