--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div class="col-lg-10 col-md-12 m-auto about-item">
                     <div class="row">
                         <div class="col-lg-4 col-sm-8 m-sm-auto col-md-5 text-center">
-                                <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/about-me.webm" type="video/webm"/> </video>
+                        <video autoplay muted loop class="img-fluid about-img ai-one"> <source src="images/about-me.webm" type="video/webm"/> </video>
                         </div>
                         <div class="col-lg-1 col-md-1"></div>
                         <div class="col-lg-7 col-md-6">
@@ -249,6 +249,18 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="interactief">
+    <div class="container">
+        <div class="row header-text text-center about-header">
+    <div class="col-lg-12">
+        <h3>INTER<span>A</span>CTIEF</h3>
+    </div>
+        </div>
+    <div class="col-lg-12">
+        <iframe class="rive" style="border: none" src="https://rive.app/s/mMijvsEuqUaH9-Q6qn9Tgw/embed" allowfullscreen></iframe>
+    </div>
+    </div>
     </section>
     <!-- KENNISMAKING AREA ENDS -->
 
@@ -1066,6 +1078,8 @@
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/light-version/circular.js"></script>
     <script src="js/custom.js"></script>
+    <script src="https://unpkg.com/@rive-app/canvas@1.0.65"></script>
+
 </body>
 
 </html>
