Making Rive responsive

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
         </div>
     <div class="col-lg-12">
-        <iframe class="rive" style="border: none" src="https://rive.app/s/mMijvsEuqUaH9-Q6qn9Tgw/embed" allowfullscreen></iframe>
+        <iframe class="responsive-iframe rive" style="border: none" src="https://rive.app/s/mMijvsEuqUaH9-Q6qn9Tgw/embed" allowfullscreen></iframe>
     </div>
     </div>
     </section>
