small error changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="motion design, animation, Eplainer" />
     <meta name="description" content="Explainer video to tell a clear story" />
-    <title>mattimotions - Let's animate it! </title>
+    <title>Mattimotions - Let's animate it! </title>
     <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
     <!--font-awesome icons link-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -56,10 +56,10 @@
                         <a class="nav-link" href="#waarden">Waarden</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallerij">Gallery</a>
+                        <a class="nav-link" href="#gallerij">Galerij</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bor" href="mailto:matt.de.meyer@hotmail.com" data-toggle="" data-target="#">Contact</a>
+                        <a class="nav-link bor" href="mailto:mattimotions@gmail.com" data-toggle="" data-target="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -137,7 +137,7 @@
                 <div class="col-lg-7 banner-txt">
                     <h3>Zeg het met een explainer video</h3>
                     <p> Waarom een explainer video? Het is kort, krachtig en effectief: Zo kan je je onderwerp in enkele minuten verteld krijgen. De ideale manier om jouw bedrijf in de kijker te staan.</p>
-                    <a href="#gallerij"> Ga naar Gallery</a>
+                    <a href="#gallerij"> Ga naar Galerij</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="banner-img">
@@ -242,7 +242,7 @@
                                 <h3> Matthias, de man achter Mattimotions </h3>
                                 <p> Al jaren zet ik mij in om me meer te verdiepen in animaties, zo zorg ik voor een goede uitvoering van begin tot eind.</p>
                                 <p class="separate-p tab-hider">Laat ons afspreken voor een eerste gesprek, zo kunnen we bekijken in welke richting wij je animatievideo kunnen uitwerken.</p>
-                                <a class="" href="mailto:matt.de.meyer@hotmail.com" data-toggle="" data-target="#">Contacteer mij nu!</a>
+                                <a class="" href="mailto:mattimotions@gmail.com" data-toggle="" data-target="#">Contacteer mij nu!</a>
                             </div>
                         </div>
                     </div>
@@ -344,7 +344,7 @@
         <div class="container">
             <div class="row header-text text-center">
                 <div class="col-lg-12">
-                    <h3>GAL<span>L</span>ERY</h3>
+                    <h3>GAL<span>E</span>RIJ</h3>
                 </div>
             </div>
                     <div class="row gallery-pa">
@@ -478,7 +478,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - It is me </h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - It is me </h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -503,7 +503,7 @@
                                     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - Paddlebox car</h5>
+                                                <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - Paddlebox car</h5>
                                             </div>
 
                                             <div class="modal-body">
@@ -653,7 +653,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - God is ProfilePic</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - God is ProfilePic</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -679,7 +679,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - Computer Cat</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - Computer Cat</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -731,7 +731,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle">Grahpic animation - God is Egg</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle">Graphic animation - God is Egg</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -757,7 +757,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Grahpic animation - Font: Questrial</h5>
+                                        <h5 class="modal-title" id="exampleModalCenterTitle"> Graphic animation - Font: Questrial</h5>
                                     </div>
                                     <div class="modal-body">
                                         <div class="videospace embed-responsive embed-responsive-16by9">
@@ -982,7 +982,7 @@
                                 <h3> Contacteer mij nu! </h3>
                             </div>
                             <div class="col-lg-3 col-md-5 subscripe-btn">
-                                <a href="mailto:matt.de.meyer@hotmail.com" data-toggle="" data-target="">Contact Me</a>
+                                <a href="mailto:mattimotions@gmail.com" data-toggle="" data-target="">Contact Me</a>
                             </div>
                         </div>
                     </div>
@@ -1048,7 +1048,7 @@
                             <li><a href="#Onderdelen">Onderdelen</a></li>
                             <li><a href="#Kennismaking">Kennismaking</a></li>
                             <li><a href="#waarden">Waarden</a></li>
-                            <li><a href="#gallerij">Gallery</a></li>
+                            <li><a href="#gallerij">Galerij</a></li>
                         </ul>
                     </div>
                 </div>
